<resources>
    <string name="app_name">ILoveMarshmallow</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="search_query_hint">Search</string>
    <string name="results_json_array">results</string>
    <string name="result_brand_name">brandName</string>
    <string name="result_price">price</string>
    <string name="result_image_url">imageUrl</string>
    <string name="result_asin">asin</string>
    <string name="result_product_url">productUrl</string>
    <string name="result_product_rating">productRating</string>
    <string name="result_product_name">productName</string>
    <string name="brand_name">Brand Name</string>
    <string name="product_name">Product Name</string>
    <string name="product_image">Product Image</string>
    <string name="placeholder_price">$20.00</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_product_info">ProductInfoActivity</string>
    <string name="result_description">description</string>
    <string name="result_genders">genders</string>
    <string name="result_product_type">defaultProductType</string>
    <string name="result_default_image_url">defaultImageUrl</string>
    <string name="info_description">Description</string>
    <string name="info_genders">Genders</string>

</resources>
