<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="@dimen/list_item_horizontal_padding"
                android:paddingEnd="@dimen/list_item_horizontal_padding"
                android:paddingTop="@dimen/list_item_vertical_padding"
                android:paddingBottom="@dimen/list_item_vertical_padding"
                android:background="@android:color/white"
    >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/productImage"
        android:layout_alignParentStart="true"
        android:contentDescription="@string/product_image"
        android:src="@drawable/default_img"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/brand_name"
        android:id="@+id/brandName"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@+id/productImage"
        android:layout_marginStart="@dimen/list_item_text_horizontal_margin"
        android:layout_marginTop="@dimen/list_item_text_vertical_margin"
        android:textSize="20sp"
        android:textColor="@android:color/black"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/product_name"
        android:id="@+id/productName"
        android:layout_below="@+id/brandName"
        android:layout_toEndOf="@+id/productImage"
        android:layout_marginStart="@dimen/list_item_text_horizontal_margin"
        android:layout_marginTop="3dp"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/placeholder_price"
        android:id="@+id/price"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="@dimen/list_item_text_horizontal_margin"
        android:layout_centerVertical="true"
        android:textSize="20sp"
        android:textColor="@color/primary"/>

</RelativeLayout>